--- a/src/App.css
+++ b/src/App.css
@@ -2,23 +2,23 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+    }
 
 html, body, #root {
     min-height: 100vh;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-}
+    }
 
 #root {
     display: flex;
     flex-direction: column;
-}
+    }
 
 div {
     width: 100%;
-    margin: 0;
+           margin: 0;
     padding: 0;
 }
 
@@ -26,6 +26,5 @@ main {
     flex: 1;
     width: 100%;
     margin: 0;
-    padding: 0;
-} 
+    padding: 0; } 
 
